...
            title = { Text(if (uiState.isEditMode) "Descartar alterações?" else "Descartar adição?") },
            text = { Text("Se você sair agora, todas as informações inseridas serão perdidas.") },
            confirmButton = {
                TextButton(onClick = {
                    showExitConfirmation = false
                    onBackClick(null)
                }) { Text("Confirmar") }
            },
            dismissButton = {
                TextButton(onClick = { showExitConfirmation = false }) { Text("Continuar editando") }
            }
        )
    }
...
                    }
                }

                ModernInput(
                    value = uiState.marca,
                    onValueChange = { viewModel.onMarcaChanged(it) },
                    label = "Marca/Nome",
                    placeholder = "Ex: Arroz Tio João",
                    modifier = Modifier.fillMaxWidth()
                )

                // Data de Validade
                Box(
...
